--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Temp/
 Obj/
 UnityGenerated/
 Library/
+*.exe
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
